--- a/servlet/src/main/webapp/WEB-INF/web.xml
+++ b/servlet/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	<!-- display-name : 프로젝트 이름을 설정하기 위한 엘리먼트 -->  	
 	<display-name>servlet</display-name>
 	
-	<!-- servlet : 서블릿 클래스를 서블릿으로 등록하기 위한 엘리먼트 -->
+	<!-- servlet : 서블릿 클래스를 서블릿(웹프로그램)으로 등록하기 위한 엘리먼트 -->
 	<!-- => servlet-name 엘리먼트와 servlet-class 엘리먼트를 반드시 자식 엘리먼트로 작성 -->
 	<servlet>
 		<!-- servlet-name : 서블릿을 구분하기 위한 이름(고유값)을 설정하기 위한 엘리먼트 -->
