--- a/servlet/src/main/webapp/WEB-INF/web.xml
+++ b/servlet/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,15 @@
 	<!-- display-name : 프로젝트 이름을 설정하기 위한 엘리먼트 -->  	
 	<display-name>servlet</display-name>
 	
+	<!-- context-param : 모든 웹자원(서블릿)에게 필요한 값을 제공하기 위한 엘리먼트 -->
+	<!-- => param-name 엘리먼트와 param-value 엘리먼트를 반드시 자식 엘리먼트로 작성 -->
+	<context-param>
+		<!-- param-name : 값을 구분하기 위한 이름을 설정하기 위한 엘리먼트 -->
+		<param-name>name</param-name>
+		<!-- param-value : 웹자원에게 제공할 값을 설정하기 위한 엘리먼트 -->
+		<param-value>홍길동</param-value>
+	</context-param>
+	
 	<!-- servlet : 서블릿 클래스를 서블릿(웹프로그램)으로 등록하기 위한 엘리먼트 -->
 	<!-- => servlet-name 엘리먼트와 servlet-class 엘리먼트를 반드시 자식 엘리먼트로 작성 -->
 	<servlet>
@@ -12,6 +21,12 @@
 		<servlet-name>hello</servlet-name>
 		<!-- servlet-class : 서블릿으로 등록될 서블릿 클래스를 설정하기 위한 엘리먼트 -->
 		<servlet-class>xyz.itwill.servlet.HelloServlet</servlet-class>
+		
+		<!-- init-param : 서블릿에게 필요한 값을 제공하기 위한 엘리먼트 -->
+		<init-param>
+			<param-name>title</param-name>
+			<param-value>서블릿</param-value>
+		</init-param>
 	</servlet>
 	
 	<!-- servlet-mapping : 서블릿의 요청 URL 주소를 매핑 설정하기 위한 엘리먼트 -->
