--- a/servlet/src/main/webapp/WEB-INF/web.xml
+++ b/servlet/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,20 @@
 		<!-- param-value : 웹자원에게 제공할 값을 설정하기 위한 엘리먼트 -->
 		<param-value>홍길동</param-value>
 	</context-param>
+
+	<!-- error-page : 클라이언트에게 전달할 에러페이지를 설정하기 위한 엘리먼트 -->
+	<!-- => error-code 엘리먼트(exception-type 엘리먼트)와 location 엘리먼트를 반드시 자식 엘리먼트로 작성 -->
+	<error-page>
+		<!-- error-code : 에러코드를 설정하기 위한 엘리먼트 -->
+		<error-code>400</error-code>
+		<!-- location : 에러페이지의 URL 주소를 설정하기 위한 엘리먼트 -->
+		<location>/error.html</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/error_404.html</location>
+	</error-page>
 	
 	<!-- servlet : 서블릿 클래스를 서블릿(웹프로그램)으로 등록하기 위한 엘리먼트 -->
 	<!-- => servlet-name 엘리먼트와 servlet-class 엘리먼트를 반드시 자식 엘리먼트로 작성 -->
