--- a/jsp/src/main/webapp/WEB-INF/web.xml
+++ b/jsp/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>jsp</display-name>
+  
+  <!-- error-page : 에러코드 대신 응답될 JSP 문서를 설정하기 위한 엘리먼트  -->
+  <error-page>
+  	<!-- exception-type : JSP 문서 실행시 발생될 예외를 설정하기 위한 엘리먼트 -->
+  	<exception-type>java.lang.NullPointerException</exception-type>
+  	<!-- exception-type : 예외가 발생될 경우 응답될 JSP 문서의 컨텍스트 경로 설정하기 위한 엘리먼트 -->
+  	<location>/error/page_error.jsp</location>
+  </error-page>
+  
+  <error-page>
+  	<!-- error-code : 에러코드(4XX or 5XX)를 설정하기 위한 엘리먼트 -->
+  	<error-code>500</error-code>
+  	<location>/error/error_500.jsp</location>
+  </error-page>
+  
+  <error-page>
+  	<error-code>400</error-code>
+  	<location>/error/error_400.jsp</location>
+  </error-page>
+  
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/error/error_404.jsp</location>
+  </error-page>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
