--- a/jsp/.settings/org.eclipse.core.resources.prefs
+++ b/jsp/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/directive/directive.jsp=UTF-8
+encoding//src/main/webapp/directive/include_sub.jspf=UTF-8
 encoding//src/main/webapp/hello.jsp=UTF-8
 encoding/<project>=UTF-8
