--- a/mvc/src/main/webapp/WEB-INF/web.xml
+++ b/mvc/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,11 @@
 	<servlet>
 		<servlet-name>controller</servlet-name>
 		<servlet-class>xyz.itwill.mvc.ControllerServlet</servlet-class>
+		<!-- init-param : 서블릿 클래스에게 값을 제공하기 위한 엘리먼트 -->
+		<init-param>
+			<param-name>configFilePath</param-name>
+			<param-value>/WEB-INF/model.properties</param-value>		
+		</init-param>
 		<!-- load-on-startup : 클라이언트 요청 없이 서블릿 클래스를 객체로 생성하기 위한 엘리먼트 -->
 		<!-- => WAS 프로그램이 실행될 때 서블릿 클래스를 객체로 미리 생성 -->
 		<!-- => 서블릿 객체가 생성된 후 자동으로 init() 메소드를 자동 호출하여 초기화 처리 -->
